@@ -4,7 +4,7 @@
      the resource broker to send to the Storage Manager.
      See the CMS EvF Storage Manager wiki page for further notes.
 
-   $Id: FUShmOutputModule.cc,v 1.16 2012/09/02 15:04:25 smorovic Exp $
+   $Id: FUShmOutputModule.cc,v 1.17 2012/09/03 19:51:27 smorovic Exp $
 */
 
 #include "EventFilter/Utilities/interface/i2oEvfMsgs.h"
@@ -45,11 +45,6 @@ namespace edm
     shmBuffer_(0)
     , name_(ps.getParameter<std::string>( "@module_label" ))
     , count_(0)
-    , postponeInitMsg_(false)
-    , sentInitMsg_(false)
-    , initBuf_(nullptr)
-    , initBufSize_(0)
-    , postponeStart_(false)
     , nExpectedEPs_(0)
     , numDatasets_(0)
     , streamId_()
@@ -77,8 +72,9 @@ namespace edm
     //shmdt(shmBuffer_);
   }
 
-  void FUShmOutputModule::insertStreamAndDatasetInfo(edm::ParameterSet & streams, edm::ParameterSet datasets/*std:std::string & moduleList*/)
+  void FUShmOutputModule::insertStreamAndDatasetInfo(edm::ParameterSet & streams, edm::ParameterSet datasets)
   {
+    if (numDatasets_) return;
     try {
       //compose dataset name string
       if (name_.size() > std::string("hltOutput").size() && name_.find("hltOutput")!=std::string::npos)
@@ -86,7 +82,6 @@ namespace edm
       else return;
 
       //make local copy of dataset definitions
-
       if (streamId_.size()) {
 	Strings streamDatasetList = streams.getParameter<Strings>(streamId_);
 	for (size_t i=0;i<streamDatasetList.size();i++) {
@@ -117,18 +112,6 @@ namespace edm
     unsigned int size = initMessage.size();
     InitMsgView dummymsg(buffer);
     parseDatasets(dummymsg);
-    //saving message for later if postpone is on
-    if (postponeInitMsg_) {
-      sentInitMsg_=false;
-      if (initBuf_) delete initBuf_;//clean up if there are leftovers from last run
-      //copy message for later sending
-      initBufSize_ = initMessage.size();
-      initBuf_ = new unsigned char[initBufSize_];
-      memcpy(initBuf_, (unsigned char*) initMessage.startAddress(),sizeof(unsigned char)*initBufSize_);
-      return;
-    }
-
-    sentInitMsg_=true;
     count_ = 0;
     if(!shmBuffer_) shmBuffer_ = sm_sharedmemory.getShmBuffer();
     if(!shmBuffer_) edm::LogError("FUShmOutputModule") 
@@ -147,49 +130,8 @@ namespace edm
     }
   }
 
-  void FUShmOutputModule::setPostponeInitMsg()
-  {
-    //postpone start and Init message for after beginRun
-    postponeInitMsg_=true;
-    postponeStart_=true;
-    //reset this on each run
-    if (initBuf_) delete initBuf_;
-    initBufSize_=0;
-    initBuf_=nullptr;
-    sentInitMsg_=false;
-  }
-
-  void FUShmOutputModule::sendPostponedInitMsg() 
-  {
-    if (postponeStart_) {
-      postponeStart_=false;
-      start();
-    }
-    if (!sentInitMsg_ && postponeInitMsg_) {
-      if(!shmBuffer_) shmBuffer_ = sm_sharedmemory.getShmBuffer();
-      if(!shmBuffer_) edm::LogError("FUShmOutputModule")
-	<< " Error getting shared memory buffer for INIT. "
-	<< " Make sure you configure the ResourceBroker before the FUEventProcessor! "
-	<< " No INIT is sent - this is probably fatal!";
-      if(shmBuffer_)
-      {
-	FDEBUG(10) << "writing out (postponed) INIT message with size = " << initBufSize_ << std::endl;
-	InitMsgView dummymsg(initBuf_);
-	uint32 dmoduleId = dummymsg.outputModuleId();
-	bool ret = sm_sharedmemory.getShmBuffer()->writeRecoInitMsg(dmoduleId, getpid(), fuGuidValue_, initBuf_, initBufSize_,nExpectedEPs_);
-	if(!ret) edm::LogError("FUShmOutputModule") << " Error writing preamble to ShmBuffer";
-      }
-      sentInitMsg_=true;
-      if (initBuf_) delete initBuf_;
-      initBufSize_=0;
-      initBuf_=nullptr;
-    }
-  }
-
-
   void FUShmOutputModule::doOutputEvent(EventMsgBuilder const& eventMessage)
   {
-    if (!sentInitMsg_ && postponeInitMsg_) sendPostponedInitMsg();
     if(!shmBuffer_) edm::LogError("FUShmOutputModule") 
       << " Invalid shared memory buffer at first event"
       << " Make sure you configure the ResourceBroker before the FUEventProcessor! "
@@ -213,16 +155,10 @@ namespace edm
 
   void FUShmOutputModule::start()
   {
-    if (postponeStart_) return;
     //shmBuffer_ = evf::FUShmBuffer::getShmBuffer();
     shmBuffer_ = sm_sharedmemory.getShmBuffer();
     if(0==shmBuffer_) 
       edm::LogError("FUShmOutputModule")<<"Failed to attach to shared memory";
-  }
-
-  void FUShmOutputModule::sendPostponedStart() {
-      postponeStart_=false;
-      start();
   }
 
   void FUShmOutputModule::stop()
@@ -257,7 +193,8 @@ namespace edm
      totalPaths_ = allPaths.size();
      for (size_t i=0;i<numDatasets_;i++)
      {
-       dpEventSelectors_.push_back(std::pair<std::string,edm::EventSelector*>(selectedDatasetNames_[i],new edm::EventSelector(datasetPaths_[i],allPaths))); 
+       dpEventSelectors_.push_back(std::pair<std::string,
+         edm::EventSelector*>(selectedDatasetNames_[i],new edm::EventSelector(datasetPaths_[i],allPaths))); 
        datasetCounts_.push_back(0);
      }
   }
@@ -273,4 +210,5 @@ namespace edm
       }
     }
   }
+
 }
