@@ -1,3 +1,10 @@
+2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-08-18
+	* separate retrieving new dataset information from modules and from
+	registry
+	* removal of postponed init message sending dead code)
+
 2012-09-03 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-08-17
