@@ -1,3 +1,9 @@
+2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V02-05-24
+	* reset shm output module vector and recalculate dataset info when
+	creating FWEP.
+
 2012-09-14 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V02-05-23
